Start building mobile navbar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 	<title>Johnny Lucas e Matheus</title>
 </head>
 <body>
+	<header class="container-fluid" style="background-image: linear-gradient(to right, #2D0575, #4207AF);">
+		<div class="row">
+			<div class="col"></div>
+			<div class="col">
+				<img src="./img/logo-branca.png" alt="" style="width: 100%">
+			</div>
+			<div class="col"></div>
+		</div>
+	</header>
 
+	<img src="./layout/home.jpeg" alt="" style="width: 100%">
 </body>
 </html>
