Link main file to stylesheet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<!-- Favicon icon -->
 	<link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
+	<!-- Stylesheet-->
+	<link rel="stylesheet" href="./css/style.css">
+
 	<title>Johnny Lucas e Matheus</title>
 </head>
 <body>
