--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<title>Johnny Lucas e Matheus</title>
 </head>
 <body>
-	<header class="container-fluid" style="background-image: linear-gradient(to right, #2D0575, #4207AF);">
+	<!-- <header class="container-fluid" style="background-image: linear-gradient(to right, #2D0575, #4207AF);">
 		<div class="row">
 			<div class="col"></div>
 			<div class="col">
@@ -25,8 +25,34 @@
 			</div>
 			<div class="col"></div>
 		</div>
-	</header>
+	</header> -->
 
+	<nav class="navbar navbar-expand-lg">
+		<div class="dropdown mx-auto d-md-none">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo" height="50">
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+		        <a class="dropdown-item" href="#">Action</a>
+		        <a class="dropdown-item" href="#">Another action</a>
+		        <a class="dropdown-item" href="#">Something else here</a>
+        	</div>
+		</div>
+	</nav>
+
+
+
+
+
+
+
+
+
+<div>.</div>
 	<img src="./layout/home.jpeg" alt="" style="width: 100%">
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
