--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Favicon icon -->
 	<link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
+
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 	<!-- Stylesheet-->
 	<link rel="stylesheet" href="./css/style.css">
@@ -27,23 +30,23 @@
 		</div>
 	</header> -->
 
-	<nav class="navbar navbar-expand-lg">
-		<div class="dropdown mx-auto d-md-none">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	<nav class="navbar ">
+		<div class="mx-auto d-md-none">
+			<a class="nav-brand">
 				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo" height="50">
+				<i class="fas fa-caret-down" style="color: #FFF"></i>
 			</a>
-			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		        <a class="dropdown-item" href="#">Action</a>
-		        <a class="dropdown-item" href="#">Another action</a>
-		        <a class="dropdown-item" href="#">Something else here</a>
-        	</div>
 		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">Biografia</div>
+				<div class="col-md-3">Agenda</div>
+				<div class="col-md-3">Fotos</div>
+				<div class="col-md-3">Contato</div>
+			</div>
+		</div>
+
 	</nav>
-
-
-
-
-
 
 
 
