--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
 		</div>
 	</header> -->
 
-	<nav class="navbar ">
-		<div class="mx-auto d-md-none">
-			<a class="nav-brand">
+	<nav class="container-fluid">
+		<div class="row">
+			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
 				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo" height="50">
 				<i class="fas fa-caret-down" style="color: #FFF"></i>
 			</a>
+			<div class="col-md-offset-3 col-md-6">
+				<div class="row">
+					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Biografia</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Agenda</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Galeria</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Contato</a>
+				</div>
+			</div>
 		</div>
+		<!--
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">Biografia</div>
@@ -45,6 +54,7 @@
 				<div class="col-md-3">Contato</div>
 			</div>
 		</div>
+		-->
 
 	</nav>
 
