--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<!-- Stylesheet-->
 	<link rel="stylesheet" href="./css/style.css">
 
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet">
+
 	<title>Johnny Lucas e Matheus</title>
 </head>
 <body>
@@ -34,14 +37,14 @@
 		<div class="row">
 			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
 				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo" height="50">
-				<i class="fas fa-caret-down" style="color: #FFF"></i>
+				<i class="fas fa-caret-down"></i>
 			</a>
-			<div class="col-md-offset-3 col-md-6">
+			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
 				<div class="row">
-					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Biografia</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Agenda</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Galeria</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 text-center">Contato</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Agenda</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Galeria</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Contato</a>
 				</div>
 			</div>
 		</div>
@@ -54,7 +57,7 @@
 				<div class="col-md-3">Contato</div>
 			</div>
 		</div>
-		-->
+
 
 	</nav>
 
