--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	<nav class="container-fluid">
 		<div class="row">
 			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
-				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo" height="50">
-				<i class="fas fa-caret-down"></i>
+				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
+				<i class="fas fa-caret-down" id="arrowDown"></i>
 			</a>
 			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
 				<div class="row">
@@ -57,7 +57,7 @@
 				<div class="col-md-3">Contato</div>
 			</div>
 		</div>
-
+		-->
 
 	</nav>
 
@@ -67,8 +67,7 @@
 <div>.</div>
 	<img src="./layout/home.jpeg" alt="" style="width: 100%">
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+	<script src="./js/index.js"></script>
 </body>
 </html>
