--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			</a>
 			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
 				<div class="row">
-					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
 					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Agenda</a>
+					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
 					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Galeria</a>
 					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Contato</a>
 				</div>
@@ -40,11 +40,30 @@
 		</div>
 	</nav>
 
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 my-dropdown">
+				<a href="#" class="text-center montserrat-md">Agenda</a>
+				<a href="#" class="text-center montserrat-md">Biografia</a>
+				<a href="#" class="text-center montserrat-md">Galeria</a>
+				<a href="#" class="text-center montserrat-md">Contato</a>
+			</div>
+			<img src="./img/canal-vazio.png" alt="" style="width: 100%">
+		</div>
+	</section>
 
-
-
-<div>.</div>
-	<img src="./layout/home.jpeg" alt="" style="width: 100%">
+	<!-- Different class names from those used by Bootstraps
+		were preferred
+	<section class="container own-dropdown hidden-md hidden-lg">
+		<div class="row">
+			<div class="col-sm-offset-6 col-sm-3">
+				<a href="#" class="text-center montserrat-md">Agenda</a>
+				<a href="#" class="text-center montserrat-md">Biografia</a>
+				<a href="#" class="text-center montserrat-md">Galeria</a>
+				<a href="#" class="text-center montserrat-md">Contato</a>
+			</div>
+		</div>
+	</section> -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 	<script src="./js/index.js"></script>
