Config navbar for small devices

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<section class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 my-dropdown">
+			<div class="col-xs-12 col-sm-offset-6 col-sm-3 my-dropdown">
 				<a href="#" class="text-center montserrat-md">Agenda</a>
 				<a href="#" class="text-center montserrat-md">Biografia</a>
 				<a href="#" class="text-center montserrat-md">Galeria</a>
