--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 	</nav>
 
-	<section class="container-fluid">
+	<section class="container-fluid background">
 		<div class="row">
 			<div class="col-xs-12 col-sm-offset-6 col-sm-3 hidden-md hidden-lg my-dropdown">
 				<a href="#" class="text-center montserrat-md">Agenda</a>
@@ -48,22 +48,18 @@
 				<a href="#" class="text-center montserrat-md">Galeria</a>
 				<a href="#" class="text-center montserrat-md">Contato</a>
 			</div>
-			<img src="./img/canal-vazio.png" alt="" style="width: 100%">
 		</div>
-	</section>
-
-	<!-- Different class names from those used by Bootstraps
-		were preferred
-	<section class="container own-dropdown hidden-md hidden-lg">
 		<div class="row">
-			<div class="col-sm-offset-6 col-sm-3">
-				<a href="#" class="text-center montserrat-md">Agenda</a>
-				<a href="#" class="text-center montserrat-md">Biografia</a>
-				<a href="#" class="text-center montserrat-md">Galeria</a>
-				<a href="#" class="text-center montserrat-md">Contato</a>
+			<div class="col-xs-12">
+				<img src="./img/dupla.png" alt="" style="width: 100%">
+			</div>
+			<div class="col-xs-12">
+				<iframe width="100%" height="216" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 			</div>
 		</div>
-	</section> -->
+
+		<p>teste</p>
+	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 	<script src="./js/index.js"></script>
