Make iframe element responsive

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 				<img src="./img/dupla.png" alt="" style="width: 100%">
 			</div>
 			<div class="col-xs-12">
-				<iframe width="100%" height="216" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
+				<div class="embed-responsive embed-responsive-16by9 video">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
+				</div>
 			</div>
 		</div>
 
