Add h3 with text about social medias

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 				</div>
 			</div>
 		</div>
-
-		<p>teste</p>
+		<div class="row">
+			<div class="col-xs-offset-1 col-xs-11">
+				<h3 class="montserrat-md text-uppercase">confira em sua<br>plataforma<br><span class="montserrat-x-bold">preferida</span></h3>
+			</div>
+		</div>
 	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
