Place social media icons

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
 				<h3 class="montserrat-md text-uppercase">confira em sua<br>plataforma<br><span class="montserrat-x-bold">preferida</span></h3>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-xs-offset-1 col-xs-10 text-center social-icons">
+					<div class="social-media">
+						<a href="">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+					</div>
+					<div class="social-media">
+						<a href="">
+							<i class="fab fa-instagram"></i>
+						</a>
+					</div>
+					<div class="social-media">
+						<a href="">
+							<i class="fab fa-youtube"></i>
+						</a>
+					</div>
+					<div class="social-media">
+						<a href="">
+							<i class="fab fa-spotify"></i>
+						</a>
+					</div>
+					<div class="social-media">
+						<a href="">
+							<i class="fab fa-apple"></i>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
