--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						</a>
 					</div>
 					<div class="social-media">
-						<a href="">
+						<a class="text-center" href="">
 							<i class="fab fa-instagram"></i>
 						</a>
 					</div>
