Add description meta-tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Description" content="Página principal do clipe Patroa Vida Loka de Johnny Lucas e Matheus com MC Duduzinho">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -26,7 +27,7 @@
 	<nav class="container-fluid">
 		<div class="row">
 			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
-				<img class="nav-logo" src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
+				<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
 				<i class="fas fa-caret-down" id="arrowDown"></i>
 			</a>
 			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
@@ -55,7 +56,7 @@
 			</div>
 			<div class="col-xs-12">
 				<div class="embed-responsive embed-responsive-16by9 video">
-					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
+					<iframe title="patroa-vida-loka-feat-mc-duduzinho-single" class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 				</div>
 			</div>
 		</div>
