Add security attribute to anchor elements

--- a/index.html
+++ b/index.html
@@ -68,27 +68,27 @@
 		<div class="row">
 			<div class="col-xs-offset-1 col-xs-10 text-center social-icons">
 					<div class="social-media">
-						<a target="_blank" href="https://www.facebook.com/JohnnyLucaseMatheus/">
+						<a rel="noopener" target="_blank" href="https://www.facebook.com/JohnnyLucaseMatheus/">
 							<i class="fab fa-facebook-f"></i>
 						</a>
 					</div>
 					<div class="social-media">
-						<a target="_blank" href="https://www.instagram.com/johnnylucasematheus/">
+						<a rel="noopener"target="_blank" href="https://www.instagram.com/johnnylucasematheus/">
 							<i class="fab fa-instagram"></i>
 						</a>
 					</div>
 					<div class="social-media">
-						<a target="_blank" href="https://www.youtube.com/channel/UCSq8iYB8YfmADtdks5q4uVA">
+						<a rel="noopener"target="_blank" href="https://www.youtube.com/channel/UCSq8iYB8YfmADtdks5q4uVA">
 							<i class="fab fa-youtube"></i>
 						</a>
 					</div>
 					<div class="social-media">
-						<a target="_blank" href="https://open.spotify.com/track/78fTkUO7qe0olSfuaJuhS1?si=iGq1TKOFStmFRrsq3knqAQ">
+						<a rel="noopener"target="_blank" href="https://open.spotify.com/track/78fTkUO7qe0olSfuaJuhS1?si=iGq1TKOFStmFRrsq3knqAQ">
 							<i class="fab fa-spotify"></i>
 						</a>
 					</div>
 					<div class="social-media">
-						<a target="_blank" href="https://itunes.apple.com/br/album/patroa-vida-loka-feat-mc-duduzinho-single/1373657398https://itunes.apple.com/br/album/patroa-vida-loka-feat-mc-duduzinho-single/1373657398">
+						<a rel="noopener" target="_blank" href="https://itunes.apple.com/br/album/patroa-vida-loka-feat-mc-duduzinho-single/1373657398https://itunes.apple.com/br/album/patroa-vida-loka-feat-mc-duduzinho-single/1373657398">
 							<i class="fab fa-apple"></i>
 						</a>
 					</div>
