Change background image

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12">
-				<img src="./img/dupla.png" alt="" style="width: 100%">
+			<div class="col-xs-12 bkg-img">
+				<img src="./img/ipad.jpg" alt="" style="width: 100%">
 			</div>
 			<div class="col-xs-12">
 				<div class="embed-responsive embed-responsive-16by9 video">
