Recreate menu for extra-small devices

--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="pt-br">
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Description" content="Página principal do clipe Patroa Vida Loka de Johnny Lucas e Matheus com MC Duduzinho">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Página principal do clipe Patroa Vida Loka de Johnny Lucas e Matheus com MC Duduzinho" />
     <meta name="theme-color" content="#3A16AC"/>
 
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
 
 	<!-- Favicon icon -->
 	<link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
 	<!-- Font Awesome -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
 
 	<!-- Stylesheet-->
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/style.css" />
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet" />
 
 	<title>Johnny Lucas e Matheus</title>
 </head>
@@ -31,26 +31,28 @@
 				<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
 				<i class="fas fa-caret-down" id="arrowDown"></i>
 			</a>
-			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
+		</div>
+		<div class="row links">
+			<div class="col-xs-12 col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
 				<div class="row">
-					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Agenda</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Galeria</a>
-					<a href="#" class="hidden-xs hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Contato</a>
+					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Agenda</a>
+					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
+					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Galeria</a>
+					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Contato</a>
 				</div>
 			</div>
 		</div>
 	</nav>
 
 	<section class="container-fluid background">
-		<div class="row">
+	<!--<div class="row">
 			<div class="col-xs-12 col-sm-offset-6 col-sm-3 hidden-md hidden-lg my-dropdown">
 				<a href="#" class="text-center montserrat-md">Agenda</a>
 				<a href="#" class="text-center montserrat-md">Biografia</a>
 				<a href="#" class="text-center montserrat-md">Galeria</a>
 				<a href="#" class="text-center montserrat-md">Contato</a>
 			</div>
-		</div>
+		</div>-->
 		<div class="row">
 			<div class="col-xs-12 bkg-img">
 				<img src="./img/ipad.jpg" alt="" style="width: 100%">
