Update rotateIcon function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="row">
 			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
 				<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
-				<i class="fas fa-caret-down" id="arrowDown"></i>
+				<i class="fas fa-caret-down"></i>
 			</a>
 		</div>
 		<div class="row links">
