--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">" />
     <meta name="Description" content="Página principal do clipe Patroa Vida Loka de Johnny Lucas e Matheus com MC Duduzinho" />
     <meta name="theme-color" content="#3A16AC"/>
 
