--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="Description" content="Página principal do clipe Patroa Vida Loka de Johnny Lucas e Matheus com MC Duduzinho" />
     <meta name="theme-color" content="#3A16AC"/>
 
@@ -27,7 +27,7 @@
 <body>
 	<nav class="container-fluid">
 		<div class="row">
-			<a class="col-xs-offset-5 hidden-md hidden-lg" href="#">
+			<a class="col-xs-offset-4 col-xs-4 col-sm-offset-4 col-sm-4 hidden-md hidden-lg text-center" href="#">
 				<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
 				<i class="fas fa-caret-down"></i>
 			</a>
