Improve logo responsiveness

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 <body>
 	<nav class="container-fluid">
 		<div class="row">
-			<a class="col-xs-offset-4 col-xs-4 col-sm-offset-4 col-sm-4 hidden-md hidden-lg text-center" href="#">
-				<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
-				<i class="fas fa-caret-down"></i>
+			<a class="col-xs-12 col-sm-offset-4 col-sm-4 hidden-md hidden-lg text-center" href="#">
+				<div>
+					<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
+					<i class="fas fa-caret-down"></i>
+				</div>
 			</a>
 		</div>
 		<div class="row links">
