--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 	<nav class="container-fluid">
 		<div class="row">
-			<a class="col-xs-12 col-sm-offset-4 col-sm-4 hidden-md hidden-lg text-center" href="#">
+			<a class="col-xs-12 col-sm-12 hidden-md hidden-lg text-center" href="#">
 				<div>
 					<img src="./img/logo-branca.png" alt="Johnny Lucas e Matheus' logo">
 					<i class="fas fa-caret-down"></i>
@@ -35,12 +35,12 @@
 			</a>
 		</div>
 		<div class="row links">
-			<div class="col-xs-12 col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8">
+			<div class="col-xs-12 col-sm-12">
 				<div class="row">
-					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Agenda</a>
-					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Biografia</a>
-					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Galeria</a>
-					<a href="#" class="col-xs-3 hidden-sm col-md-3 col-lg-3 text-center montserrat-md text-uppercase">Contato</a>
+					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Agenda</a>
+					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Biografia</a>
+					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Galeria</a>
+					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Contato</a>
 				</div>
 			</div>
 		</div>
