--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="col-xs-12 bkg-img">
 				<img src="./img/ipad.jpg" alt="" style="width: 100%">
 			</div>
-			<div class="col-xs-12">
+			<div class="col-xs-12  col-sm-offset-1 col-sm-10">
 				<div class="embed-responsive embed-responsive-16by9 video">
 					<iframe title="patroa-vida-loka-feat-mc-duduzinho-single" class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 				</div>
