Change navbar links' container for small devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</a>
 		</div>
 		<div class="row links">
-			<div class="col-xs-12 col-sm-12">
+			<div class="col-xs-12 col-sm-offset-1 col-sm-10">
 				<div class="row">
 					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Agenda</a>
 					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Biografia</a>
