--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 			</a>
 		</div>
 		<div class="row links">
-			<div class="col-xs-12 col-sm-offset-1 col-sm-10">
+			<div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
 				<div class="row">
-					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Agenda</a>
-					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Biografia</a>
-					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Galeria</a>
-					<a href="#" class="col-xs-3 col-sm-3 text-center montserrat-md text-uppercase">Contato</a>
+					<a href="#" class="col-xs-3 col-sm-3 col-md-3 text-center montserrat-md text-uppercase">Agenda</a>
+					<a href="#" class="col-xs-3 col-sm-3 col-md-3 text-center montserrat-md text-uppercase">Biografia</a>
+					<a href="#" class="col-xs-3 col-sm-3 col-md-3 text-center montserrat-md text-uppercase">Galeria</a>
+					<a href="#" class="col-xs-3 col-sm-3 col-md-3 text-center montserrat-md text-uppercase">Contato</a>
 				</div>
 			</div>
 		</div>
