--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
 
 	<section class="container-fluid background">
 		<div class="row">
-			<div class="col-xs-12 bkg-img">
-				<img src="./img/ipad.jpg" alt="" style="width: 100%">
+			<div class="col-xs-12 hidden-md bkg-img">
+				<img src="./img/ipad.jpg" alt="">
 			</div>
-			<div class="col-xs-12  col-sm-offset-1 col-sm-10">
+			<div class="hidden-xs hidden-sm col-md-12 bkg-img">
+				<img srcset="" src="./img/canal-dupla-1920w.png" alt="Imagem de Johnny Lucas e Matheus cantando">
+			</div>
+			<div class="col-xs-12 col-sm-offset-1 col-sm-10">
 				<div class="embed-responsive embed-responsive-16by9 video">
 					<iframe title="patroa-vida-loka-feat-mc-duduzinho-single" class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 				</div>
