Change background image method
Instead of using an img tag for displaying the background image on both mobile and desktop devices, I have now decided to use CSS' background-image property to display both images so that I avoid further problems.

--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
 
 	<section class="container-fluid background">
 		<div class="row">
-			<div class="col-xs-12 hidden-md bkg-img">
+			<div class="col-xs-12 hidden-md bkg-img remove-md">
 				<img src="./img/ipad.jpg" alt="">
 			</div>
-			<div class="hidden-xs hidden-sm col-md-12 bkg-img">
-				<img srcset="" src="./img/canal-dupla-1920w.png" alt="Imagem de Johnny Lucas e Matheus cantando">
-			</div>
-			<div class="col-xs-12 col-sm-offset-1 col-sm-10">
+			<div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-0 col-md-5 teste">
 				<div class="embed-responsive embed-responsive-16by9 video">
 					<iframe title="patroa-vida-loka-feat-mc-duduzinho-single" class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 				</div>
