Update social-media links displaying

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-offset-1 col-xs-10 text-center social-icons">
+			<div class="col-xs-offset-1 col-xs-10 social-icons">
 					<div class="social-media">
 						<a rel="noopener" target="_blank" href="https://www.facebook.com/JohnnyLucaseMatheus/">
 							<i class="fab fa-facebook-f"></i>
