--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 	<section class="container-fluid background">
 		<div class="row">
-			<div class="col-xs-12 hidden-md bkg-img remove-md">
+			<div class="col-xs-12 hidden-md bkg-img">
 				<img src="./img/ipad.jpg" alt="">
 			</div>
 			<div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-0 col-md-5 teste">
