Adapt all remaining content to desktop devices

--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
 
 	<section class="container-fluid background">
 		<div class="row">
-			<div class="col-xs-12 hidden-md bkg-img">
+			<div class="col-xs-12 hidden-md hidden-lg bkg-img">
 				<img src="./img/ipad.jpg" alt="">
 			</div>
-			<div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-0 col-md-5 teste">
+			<div class="col-md-offset-1 col-md-11 hidden-xs hidden-sm">
+				<h3 class="montserrat-x-bold text-uppercase first-heading">
+					assista agora
+				</h3>
+			</div>
+			<div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-0 col-md-6">
 				<div class="embed-responsive embed-responsive-16by9 video">
 					<iframe title="patroa-vida-loka-feat-mc-duduzinho-single" class="embed-responsive-item" src="https://www.youtube.com/embed/wk-8EVzLPPI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
 				</div>
